Improve strings color

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "providence",
-  "displayName": "to-the-moon-color-theme",
+  "displayName": "providence-color-theme",
   "description": "Theme made for professionals.",
   "version": "0.0.1",
   "engines": {
